style/mainframe_responsive.css
@media (max-width: 1300px) {
    .main-content {
        min-height: 100vh;
    }
}

@media (max-width: 767px) {
    .header-nav p {
        display: none;
    }

    .hide-in-resp {
        display: none;
    }

    .hide-for-desktop {
        display: unset;
    }

    .avatar-menu {
        transition: opacity 0.5s, transform 0.3s, visibility 0.3s;
        right: 0px;
    }

    .header-nav {
        padding: 20px 16px;
    }

    .body {
        flex-direction: column-reverse;
    }

    .logo-section {
        display: none;
    }

    .sidebar-nav {
        justify-content: space-evenly;
        flex-direction: row;
        gap: 0px;
        padding: 0px;
    }

    .sidebar-nav-section {
        flex-direction: column;
        flex: 1;
        padding: 8px 0px;
        border-radius: 16px;
    }

    .sidebar-footer {
        display: none;
    }

    .sidebar {
        position: sticky;
        bottom: 0px;
        min-height: 0px;
        line-height: 100%;
    }

    .main-content {
        padding: 16px 64px;
    }

    .logo-responsive {
        display: block !important;
        height: 56px;
    }
}

